# DiscordBotTalker

./: .gitignore  Cargo.toml  features.json
src/: config.rs  financials.rs  handler.rs  main.rs
src/commands/: activities.rs  banking.rs  general.rs  mod.rs
src/commands/helpers/: helper_slots.rs  mod.rs
src/financials/: bank.rs
