[package]
name = "GambaGamba"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
serde = "1.0.219"
serde_json = "1.0.140"
serenity = { version = "0.11", features = ["client", "gateway", "standard_framework", "rustls_backend"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
